--- a/Análises/Análise da Violência no Rio de Janeiro.ipynb
+++ b/Análises/Análise da Violência no Rio de Janeiro.ipynb
@@ -36,7 +36,7 @@
     "<p font size=\"11\">\n",
     "<i >\"O Instituto de Segurança Pública (ISP), é uma autarquia vinculada diretamente à Secretaria de Estado de Planejamento e Gestão. Com 21 anos de existência, o ISP conta com grande conhecimento acumulado no desenvolvimento de metodologias de análise de dados relativos à Segurança Pública. Sua missão é produzir informações e disseminar pesquisas e análises com vistas a influenciar e subsidiar a implementação de políticas públicas de segurança e assegurar a participação social na construção dessas políticas.\" </i>(ISP - Instituto de Segurança Pública).</p>\n",
     "\n",
-    "A iniciativa foi feita como forma de assegurar transparência e as informações podem ser conferidas no <a href=\"http://www.isp.rj.gov.br/dadosoficiais.asp\">link do instituto</a>. Já o csv tratado está disponível no seguinte <a href=\"https://raw.githubusercontent.com/carlosfab/dsnp2/master/datasets/violencia_rio.csv\">github</a>"
+    "A iniciativa foi feita como forma de assegurar transparência e as informações podem ser conferidas no <a href=\"http://www.isp.rj.gov.br/dadosoficiais.asp\">link do instituto</a>. Já o csv tratado está disponível no seguinte <a href=\"https://raw.githubusercontent.com/carlosfab/dsnp2/master/datasets/violencia_rio.csv\">github</a>."
    ]
   },
   {
@@ -67,11 +67,11 @@
     "\n",
     "Para realizar a análise de forma efetiva, é importante entender os principais componentes do dataset a ser trabalhado. Portanto, iremos responder algumas questões que nos trarão o vislumbre inicial da informação.\n",
     "\n",
-    "* 1. Qual o tamanho do seu DataFrame?\n",
-    "* 2. Extrair e imprimir os nomes das colunas.\n",
-    "* 3. Quais os tipos das variáveis.\n",
-    "* 4. Visualizar as 5 primeiras linhas.\n",
-    "* 5. Identifique a porcentagem de valores ausentes das colunas.\n"
+    "*  Qual o tamanho do seu DataFrame?\n",
+    "*  Extrair e imprimir os nomes das colunas.\n",
+    "*  Quais os tipos das variáveis.\n",
+    "*  Visualizar as 5 primeiras linhas.\n",
+    "*  Identifique a porcentagem de valores ausentes das colunas.\n"
    ]
   },
   {
@@ -563,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "1e6a50b2",
+   "id": "a546a6b8",
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6edf6142",
+   "id": "1d467671",
    "metadata": {},
    "source": [
     "Podemos observar que os dados a cercar dos roubos só foram inseridos à partir de 2015, o que demonstra o motivo da descrepância em relação aos valores ausentes."
@@ -602,15 +602,15 @@
     "\n",
     "Iremos observar agora algumas informações estatísticas dos dados coletados.\n",
     "\n",
-    "* 1. Imprima o resumo estatístico do seu DataFrame\n",
-    "* 2. Encontre as médias das seguintes colunas:\n",
+    "*  Imprima o resumo estatístico do seu DataFrame\n",
+    "*  Encontre as médias das seguintes colunas:\n",
     "  * `roubo_veiculo`\n",
     "  * `furto_veiculos`\n",
     "  * `recuperacao_veiculos`\n",
-    "* 3. Calcule qual a porcentagem de carros recuperados em relação aos carros roubados + carros furtados:\n",
+    "*  Calcule qual a porcentagem de carros recuperados em relação aos carros roubados + carros furtados:\n",
     "  * $\\frac{\\text{recuperacao_veiculos}}{\\text{roubo_veiculo} + \\text{furto_veiculos}}$\n",
-    "* 4. Encontre os valores máximos, mínimos, média e desvio padrão da coluna `hom_doloso`\n",
-    "* 5. Encontre os valores máximos, mínimos, média e desvio padrão da coluna `hom_culposo`"
+    "*  Encontre os valores máximos, mínimos, média e desvio padrão da coluna `hom_doloso`\n",
+    "*  Encontre os valores máximos, mínimos, média e desvio padrão da coluna `hom_culposo`"
    ]
   },
   {
@@ -1317,7 +1317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b650c53c",
+   "id": "4dc99798",
    "metadata": {},
    "source": [
     "Observamos no gráfico acima que o indíce de roubo em coletivo cresceu ao decorrer dos anos. Tal dado entra em cossonância com a realidade, visto que segundo ao site G1, assaltos a ônibus aumentaram 23% no Rio de Janeiro em 2020."
@@ -1325,7 +1325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8256adfd",
+   "id": "b2eb2163",
    "metadata": {},
    "source": [
     "## Conclusão\n",
