--- a/Análises/Análise da Violência no Rio de Janeiro.ipynb
+++ b/Análises/Análise da Violência no Rio de Janeiro.ipynb
@@ -1288,7 +1288,7 @@
    "source": [
     "### Crime contra a propriedade \n",
     "\n",
-    "* 1 Gráfico de linhas para a variável `roubo_em_coletivo`\n"
+    "* Gráfico de linhas para a variável `roubo_em_coletivo`\n"
    ]
   },
   {
