--- a/Análises/Análise de Doenças Cardiovasculares.ipynb
+++ b/Análises/Análise de Doenças Cardiovasculares.ipynb
@@ -13,7 +13,7 @@
     "causas de permanência hospitalar prolongada e são responsáveis pela principal alocação de recursos públicos\n",
     "em hospitalizações no Brasil (CASTRO, Luiza, 2004). De acordo com o Ministério da Saúde, estima-se que em 2040 haverá um aumento de 250% nos casos de óbito por Infarto Agudo do Miocárdio (IAM).\n",
     "\n",
-    "<img src=\"Arquivos/heartdisease.jpg\"  width=50%>\n",
+    "<img src=\"https://github.com/danielesantiago/Data-Science/blob/main/Arquivos/heartdisease.jpg?raw=true\"  width=50%>\n",
     "\n",
     "Apesar de ser uma das principais causas de morte em todo o mundo, estima-se que cerca de 90% das doenças cardiovasculares poderiam ser evitadas por meio da adoção de mudanças no estilo de vida, como abandonar o sedentarismo e adquirir uma alimentação balanceada.\n",
     "\n",
