--- a/Análises/Análise dos Dados do Airbnb - Hong Kong.ipynb
+++ b/Análises/Análise dos Dados do Airbnb - Hong Kong.ipynb
@@ -2007,7 +2007,7 @@
     "\n",
     "Também observamos que os habitantes de Hong Kong indicam-nos um padrão interessante em relação às escolhas do AirBnb, pois mais de <b>50% dos usuários</b> analisados ofertam para alugar <b>quartos privados</b>, enquanto <b>somente 1% oferta hotéis</b>.  O número mínimo de noites alugadas observado foi um, enquanto sua média varia em aproximadamente 15 dias. Ademais, o menor preço observado foi 61 HKD no North District, cujo é o segundo menor em relação à densidade populacional. Já o maior preço observado foi 1442 HKD no distrito de Yau Tsim Mong, que de maneira inversamente proporcional, possui a segunda maior densidade populacional da região.\n",
     "\n",
-    "Por fim, lembramos que a base utilizada nessa análise é uma <b>versão resumida</b>, ideal para o que foi proposto nesse projeto de uma abordagem inicial. Para um estudo mais aprofundado é recomendado que seja utilizado a versão completa, contendo 106 atributos."
+    "Por fim, lembramos que a base de dados utilizada nessa análise é uma <b>versão resumida</b>, ideal para o que foi proposto nesse projeto de uma abordagem inicial. Para um estudo mais aprofundado é recomendado que seja utilizado a versão completa, contendo 106 atributos."
    ]
   }
  ],
