--- a/Análises/Análise dos Dados do Airbnb - Hong Kong.ipynb
+++ b/Análises/Análise dos Dados do Airbnb - Hong Kong.ipynb
@@ -24,7 +24,7 @@
    "id": "eaba4f9d",
    "metadata": {},
    "source": [
-    "<img src=\"Arquivos/hongkong.jpg\"  width=80%>"
+    "<img src=\"Arquivos/hongkong.jpg\" align ='center'  width=80%>"
    ]
   },
   {
@@ -1697,7 +1697,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85440602",
+   "id": "ec01a188",
    "metadata": {},
    "source": [
     "### **Q5. Quais os distritos mais caros?**"
@@ -1705,7 +1705,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48a01fa7",
+   "id": "110662b9",
    "metadata": {},
    "source": [
     "Não podemos concluir que os distritos mais caros são o que tem o valor médio de preço mais alto, pois a depender da quantidade de imóveis disponíveis, o resultado pode ser influenciado, como é o caso do distrito \"Kwai Tsing\", que possui apenas 5 imóveis na amostra, nos quais 4 são casas/apartamentos inteiros. Iremos então verificar a mediana da quantidade de imóvel, valor que não é influenciável pelos extremos, e com essa informação verificar quais os distritos mais caros com uma quantidade de dados razoáveis."
@@ -1714,7 +1714,7 @@
   {
    "cell_type": "code",
    "execution_count": 170,
-   "id": "02939dc4",
+   "id": "c16a3b11",
    "metadata": {},
    "outputs": [
     {
@@ -1735,7 +1735,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "f15221de",
+   "id": "8cb372d5",
    "metadata": {
     "scrolled": true
    },
@@ -1806,7 +1806,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1c9ec42",
+   "id": "8483ba83",
    "metadata": {},
    "source": [
     "O distrito de <b>Islands</b> é um dos 18 distritos de Hong Kong e consiste numa península e 263 ilhas. Áreas notáveis são partes deste distrito, como é o caso do Chek Lap Kok, ilha em que está localizado o <b>aeroporto internacional de Hong Kong</b>, Tung Chung, próximo ao aeroporto, e Discovery Bay, uma grande área residencial privada ao leste de Lantau. Diversas ilhas fazem parte do distrito, fazendo com que os visitantes estejam cercados de uma <b>bela paisagem natural</b>, incluindo a ilha deserta de Pui O em Lantau, onde os búfalos vagueiam pelas colinas."
@@ -1814,10 +1814,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e624c10d",
+   "id": "0b0ce1d0",
    "metadata": {},
    "source": [
-    "<div class=\"image123\">\n",
+    "<div class=\"image123\" align = 'center'>\n",
     "    <img src=\"Arquivos/id1.jpg\" style=\"float:left\" width=50%>\n",
     "    <img class=\"image123\" src=\"Arquivos/id2.jpg\" width=50%>\n",
     "    <img src=\"Arquivos/id3.jpg\" style=\"float:left\" width=50%>\n",
@@ -1827,7 +1827,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c3e86ac",
+   "id": "4f652784",
    "metadata": {},
    "source": [
     "<b>Central & Western</b> é o distrito tem os moradores mais instruídos com a segunda maior renda e a terceira menor população devido ao seu tamanho relativamente pequeno.\n",
@@ -1837,10 +1837,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d89a6881",
+   "id": "3542d697",
    "metadata": {},
    "source": [
-    "<div class=\"image123\">\n",
+    "<div class=\"image123\" align = 'center'>\n",
     "    <img src=\"Arquivos/cw1.jpg\" style=\"float:left\" width=50%>\n",
     "    <img class=\"image123\" src=\"Arquivos/cw2.jpg\" width=50%>\n",
     "</div>"
@@ -1848,13 +1848,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97701b3c",
+   "id": "aa9c241d",
    "metadata": {},
    "source": [
     "Por fim, temos o <b>Eastern District</b>, cujo é reconhecido por ter a segunda maior população enquanto seus moradores têm a terceira maior renda familiar média entre os 18 distritos. Este é um distrito que dependeu sempre da sua orla. Em North Point, as praias foram transformadas em fábricas e cais industriais, que continuaram a evoluir à medida que novos hotéis e instalações culturais são construídos perto da água. \n",
     " \n",
     " \n",
-    " <div class=\"image123\">\n",
+    " <div class=\"image123\" align = 'center'>\n",
     "    <img src=\"Arquivos/ed1.jpg\" style=\"float:left\" width=50%>\n",
     "    <img class=\"image123\" src=\"Arquivos/ed2.jpg\" width=50%>\n",
     "    <img src=\"Arquivos/ed3.jpg\" style=\"float:left\" width=50%>\n",
@@ -1864,7 +1864,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a86ed82",
+   "id": "74882c52",
    "metadata": {},
    "source": [
     "Apesar de termos um dataset pequeno, a fins didáticos, é possível notar a atratividade que os distritos proporcionam, haja vista a quantidade de pontos turísticos. Portanto, há sentido que tenham um preço médio relativamente alto."
