refining machine learning model

--- a/Análises/Detecção de Fraudes em Cartões de Crédito.ipynb
+++ b/Análises/Detecção de Fraudes em Cartões de Crédito.ipynb
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "a63e77a4",
+   "id": "b627ffc9",
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1024,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db9eee63",
+   "id": "20f8ba4b",
    "metadata": {},
    "source": [
     "#### Separando o conjunto de teste"
@@ -1033,7 +1033,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "5cfe64af",
+   "id": "0da7a0d6",
    "metadata": {},
    "outputs": [
     {
@@ -1255,7 +1255,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "9ff56dd5",
+   "id": "395f872b",
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1280,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "c765c389",
+   "id": "6504f2d8",
    "metadata": {},
    "outputs": [
     {
@@ -3469,12 +3469,12 @@
    "source": [
     "## Avaliação do Modelo Utilizando os Dados de Teste\n",
     "\n",
-    "No começo do projeto, realizamos um split nos dados para que tivéssemos 3 conjuntos: Um de treino, um de validação e um de teste. Agora que já exploramos e preparamos os dados, instaciamos o modelo e fizemos previsões no conjunto de validação, é hora de descobrirmos o potencial desse simples modelo com os dados de teste. Contudo, iremos realizar as padronização antes da avaliação."
+    "No começo do projeto, realizamos um split nos dados para que tivéssemos 3 conjuntos: Um de treino, um de validação e um de teste. Agora que já exploramos e preparamos os dados, instaciamos o modelo e fizemos previsões no conjunto de validação, é hora de descobrirmos o potencial desse simples modelo com os dados de teste."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "69981288",
+   "id": "06b969a8",
    "metadata": {},
    "source": [
     "### Padronização no conjunto de teste"
@@ -3483,7 +3483,7 @@
   {
    "cell_type": "code",
    "execution_count": 174,
-   "id": "3ee03546",
+   "id": "0bf34ed3",
    "metadata": {
     "scrolled": false
    },
@@ -3701,7 +3701,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b801d34",
+   "id": "1dcc1b2a",
    "metadata": {},
    "source": [
     "### Separação entre variáveis e classe alvo"
@@ -3710,7 +3710,7 @@
   {
    "cell_type": "code",
    "execution_count": 175,
-   "id": "149600c5",
+   "id": "32b6b677",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3721,7 +3721,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd47c22a",
+   "id": "86da76c1",
    "metadata": {},
    "source": [
     "### Balanceamento de dados"
@@ -3730,7 +3730,7 @@
   {
    "cell_type": "code",
    "execution_count": 176,
-   "id": "76510bc9",
+   "id": "8b7a2c37",
    "metadata": {},
    "outputs": [
     {
@@ -3752,7 +3752,7 @@
   {
    "cell_type": "code",
    "execution_count": 177,
-   "id": "7a2727a0",
+   "id": "46b20187",
    "metadata": {
     "scrolled": true
    },
