--- a/Análises/Health Insurance Cost Prediction.ipynb
+++ b/Análises/Health Insurance Cost Prediction.ipynb
@@ -870,7 +870,7 @@
    "id": "81a70cd7",
    "metadata": {},
    "source": [
-    "Pode-se observar que a maioria dos indivíduos reside na região sudeste, mas é uma diferença sutil. De modo geral os dados são desbalanceados."
+    "Pode-se observar que a maioria dos indivíduos reside na região sudeste, mas é uma diferença sutil. De modo geral os dados são balanceados."
    ]
   },
   {
@@ -2320,7 +2320,7 @@
    "id": "cb7e8155",
    "metadata": {},
    "source": [
-    "Agora iremos ajustar (tunar) os parâmetros dos modelos instanciados, a saber, Gradient Boosting Regressor (GBR), Light Gradient Boosting Machine (LightGBM) e Random Forest Regressor (rf) para otimizar sua métrica R-squared.\n",
+    "Agora iremos ajustar (tunar) os parâmetros dos modelos instanciados, a saber, Gradient Boosting Regressor (GBR), Light Gradient Boosting Machine (LightGBM) e Random Forest Regressor (rf) para otimizar sua métrica RMSE.\n",
     "\n",
     "A função tune_model() é usada para ajustar os hiperparâmetros do modelo para maximizar sua métrica de otimização. O argumento optimize='RMSE' indica que a otimização será baseada no valor de RMSE. Optei por essa métrica a fim de penalizar erros mais grotescos cometidos."
    ]
@@ -2897,7 +2897,7 @@
    "id": "b8088bbe",
    "metadata": {},
    "source": [
-    "Podemos observar que a performance do Gradient Boosting Regressor decaiu durante o ajuste ao observar o RMSE. Contudo, obtivemos um leve aumento de performance no algoritmo Light Gradient Boosting Machine e o Random Forest Regressor se manteve semelhante. Para essa métrica, quanto menor o valor melhor. Ela penaliza erros maiores, o que é interessante no escopo do problema."
+    "Podemos observar que a performance do Gradient Boosting Regressor decaiu durante o ajuste ao observar o RMSE. Contudo, obtivemos um leve aumento de performance noS algoritmoS Light Gradient Boosting Machine e Random Forest Regressor. Para essa métrica, quanto menor o valor melhor. Ela penaliza erros maiores, o que é interessante no escopo do problema."
    ]
   },
   {
@@ -3096,7 +3096,7 @@
    "id": "6e8770e5",
    "metadata": {},
    "source": [
-    "Para o **Gradient Boosting Regressor**, as features mais importantes foram `smoker`, `bmi` e `age`. Para o **'LightGBM Regressor**, `bmi`, `age`e `children`, e por fim apara o **Random Forest Regressor**, `smoker`, `age` e `bmi`."
+    "Para o **Gradient Boosting Regressor**, as features mais importantes foram `smoker`, `bmi` e `age`. Para o **LightGBM Regressor**, `bmi`, `age`e `children`, e por fim para o **Random Forest Regressor**, `smoker`, `age` e `bmi`."
    ]
   },
   {
@@ -3892,13 +3892,13 @@
    "id": "2c84be78",
    "metadata": {},
    "source": [
-    "O projeto tem como objetivo prever os custos de seguro saúde com base em um conjunto de características dos clientes. Os dados utilizados no projeto são provenientes do Kaggle e incluem informações como idade, sexo, IMC, número de filhos, se o cliente é fumante e a região em que vive.\n",
+    "O **projeto tem como objetivo prever os custos de seguro saúde** com base em um conjunto de características dos clientes. Os dados utilizados no projeto são provenientes do Kaggle e incluem informações como idade, sexo, IMC, número de filhos, se o cliente é fumante e a região em que vive.\n",
     "\n",
-    "Para realizar a previsão, foram utilizados modelos de Gradient Boosting Regressor,  Light Gradient Boost Machine e Random Forest Regressor,. O processo envolveu a importação dos dados, análise exploratória dos dados (EDA), pré-processamento, divisão dos dados em treino e teste, treinamento dos modelos e avaliação das métricas de desempenho.\n",
+    "Para realizar a previsão, foram utilizados modelos de **Gradient Boosting Regressor,  Light Gradient Boost Machine e Random Forest Regressor**. O processo envolveu a **importação dos dados, análise exploratória dos dados (EDA), pré-processamento, divisão dos dados em treino e teste, treinamento dos modelos e avaliação das métricas de desempenho**.\n",
     "\n",
-    "A partir da análise exploratória, foram identificadas algumas correlações entre as variáveis independentes e a variável dependente (custo do seguro). Além disso, observou-se que algumas variáveis, como ser fumante e a idade, têm maior impacto nos custos do seguro.\n",
+    "A partir da análise exploratória, foram identificadas **algumas correlações** entre as variáveis independentes e a variável dependente (custo do seguro). Além disso, observou-se que algumas variáveis, **como ser fumante e a idade**, têm maior impacto nos custos do seguro.\n",
     "\n",
-    "Os modelos de Machine Learning foram treinados e testados, e suas performances foram avaliadas com base no R² (coeficiente de determinação) e no RMSE (raiz do erro quadrático médio). Observou-se que o modelo mais eficaz em relação aos dados não vistos foi o Gradient Boosting Regressor, com um R2 de "
+    "Os modelos de Machine Learning foram treinados e testados, e suas performances foram avaliadas com base no R² (coeficiente de determinação) e no RMSE (raiz do erro quadrático médio). Observou-se que o **modelo mais eficaz em relação aos dados não vistos foi o Gradient Boosting Regressor**, com um R² de 0.8059 e RMSE de 5823.0668, em contraste a 0.7586 e 5906.1600 do Light Gradient e 0.7586 e \t5906.1600 do Random Forest."
    ]
   }
  ],
