--- a/Análises/Fetal Health Classification.ipynb
+++ b/Análises/Fetal Health Classification.ipynb
@@ -894,7 +894,7 @@
    "source": [
     "Com base nos histogramas acima dispostos foi possível observar que:\n",
     "* A média da variação da frequência cardíaca fetal ao longo do tempo tem maior frequência em até 10ms.\n",
-    "* A porcentagem de tempo em que a variabilidade de longo prazo é anormal tem maior frequênia em até 10%.\n",
+    "* A porcentagem de tempo em que a variabilidade de longo prazo é anormal tem maior frequência em até 10%.\n",
     "* A a média da variabilidade de curto prazo tem maior frequência em até 3ms.\n",
     "* A porcentagem de tempo com variabilidade anormal de curto prazo tem maior frequência em 60%."
    ]
@@ -1236,7 +1236,7 @@
    "id": "f327634f",
    "metadata": {},
    "source": [
-    "O grupo 5 representa a variável de resposta, que é a variável que você está interessado em prever ou explicar com base nas outras variáveis do conjunto de dados. A variável de resposta é `fetal_health`, que é uma variável categórica que indica o resultado do exame do estado de saúde fetal. Essa variável pode ter três possíveis valores:\n",
+    "O grupo 5 representa a variável de resposta, que é a variável que estamos interessados em prever. A variável de resposta é `fetal_health`, que é uma variável categórica que indica o resultado do exame do estado de saúde fetal. Essa variável pode ter três possíveis valores:\n",
     "\n",
     "* 1: quando o feto está saudável.\n",
     "* 2: quando o feto está suspeito de estar sofrendo.\n",
