conclusão de previsões de damanda de vinhos com series temporais

--- a/Análises/Previsão de Demanda de Vinhos com Séries Temporais.ipynb
+++ b/Análises/Previsão de Demanda de Vinhos com Séries Temporais.ipynb
@@ -2527,7 +2527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8406ed5b",
+   "id": "edd61e38",
    "metadata": {},
    "source": [
     "## Previsão com Prophet"
@@ -2535,7 +2535,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e518003c",
+   "id": "edd2c24b",
    "metadata": {},
    "source": [
     "O código apresentado tem como objetivo preparar os dados para serem usados no modelo Prophet para fazer previsões futuras. Defini o o tamanho da previsão como 30 dias."
@@ -2558,7 +2558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc9ffd2e",
+   "id": "0d90445f",
    "metadata": {},
    "source": [
     "Agora iremos instanciar o modelo e fazer previsões."
@@ -2794,7 +2794,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "393fe204",
+   "id": "5a9de911",
    "metadata": {},
    "source": [
     "A feature `yhat` é referente às previsões. Além disso temos também os limites inferiores e superiores (`yhat_lower`, `yhat_upper`, respectivamente).\n",
@@ -2805,7 +2805,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "a9b8ed07",
+   "id": "3f0888d0",
    "metadata": {
     "scrolled": true
    },
@@ -12513,7 +12513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b29812c",
+   "id": "bf1c524c",
    "metadata": {},
    "source": [
     "### Métricas de desempenho"
@@ -12521,7 +12521,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2451ec7a",
+   "id": "981ecfd4",
    "metadata": {},
    "source": [
     "Com o treino realizado, iremos calcular as métricas de desempenho usando os dados de treinamento e previsão."
@@ -12530,7 +12530,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "ecec4658",
+   "id": "7752a9be",
    "metadata": {},
    "outputs": [
     {
@@ -12559,7 +12559,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1b6c7a0",
+   "id": "8b2c7b03",
    "metadata": {},
    "source": [
     "O erro é baixo, o que indica bons resultados. O MAE é a média das diferenças absolutas entre os valores previstos e os valores reais. É uma medida fácil de entender e interpretar, pois tem a mesma unidade que os dados. Um MAE de 0.0216 indica que, em média, as previsões do modelo estão a 0.0216 unidades de distância dos valores reais. O MSE é a média das diferenças quadráticas entre os valores previstos e os valores reais. Ele dá mais peso aos erros maiores, pois os erros são elevados ao quadrado antes de serem calculados. O RMSE é a raiz quadrada do MSE. Ele tem a mesma unidade que os dados e os erros e é uma medida comumente usada para avaliar o desempenho de modelos de previsão. Um RMSE de 0.0244 indica que, em média, as previsões do modelo estão a 0.0244 unidades de distância dos valores reais. \n",
@@ -12570,7 +12570,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "df5cd1c5",
+   "id": "031bd5f3",
    "metadata": {
     "scrolled": true
    },
@@ -12660,7 +12660,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f014bc96",
+   "id": "7b4dfa37",
    "metadata": {},
    "source": [
     "Agora vamos criar um dataset que contenha:\n",
@@ -12674,7 +12674,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "2f841ccc",
+   "id": "3bfc0c94",
    "metadata": {
     "scrolled": true
    },
@@ -12820,7 +12820,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e05e25fa",
+   "id": "572f69fc",
    "metadata": {},
    "source": [
     "Iremos plotar as predições e a realidade."
@@ -12829,7 +12829,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "b8afa3ac",
+   "id": "d75486ea",
    "metadata": {
     "scrolled": true
    },
@@ -12856,7 +12856,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77300c92",
+   "id": "093550ad",
    "metadata": {},
    "source": [
     "Agora vamos calcular as métricas de desempenho na escala original. Obviamente, os valores estão maiores, mas de modo geral o modelo é satisfatório."
@@ -12865,7 +12865,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "cbbd6ef8",
+   "id": "3f22fca4",
    "metadata": {},
    "outputs": [
     {
@@ -12893,19 +12893,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e607e60",
+   "id": "b50eb436",
    "metadata": {},
    "source": [
     "### Conclusão"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "904c07f6",
+   "cell_type": "markdown",
+   "id": "8ba25c4c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Este projeto demonstra como aplicar **técnicas de análise de séries temporais** e utilizar o pacote **Prophet para prever a demanda de vinhos**. Para o mesmo, os seguintes passos foram realizados:\n",
+    "\n",
+    "* Importação e exploração dos dados: Carregamento dos dados, verificação das informações básicas e visualização da série temporal de vendas de vinhos.\n",
+    "* Transformação dos dados: Aplicação de uma transformação logarítmica nos dados para tornar a série temporal mais estacionária.\n",
+    "* Criação e treinamento do modelo: Utilização do pacote Prophet do Facebook para criar e treinar um modelo de previsão de séries temporais.\n",
+    "* Previsão e avaliação: Realização de previsões para um período futuro e cálculo de várias métricas de desempenho, como MAE, MSE e RMSE, tanto na escala logarítmica quanto na escala original.\n",
+    "* Visualização dos resultados: Exibição dos resultados das previsões e comparação com os valores reais.\n",
+    "\n",
+    "Com base nas métricas de desempenho calculadas, o modelo Prophet teve um bom desempenho na previsão da demanda de vinhos."
+   ]
   }
  ],
  "metadata": {
