finalizando dataset de series temporais

--- a/Análises/Previsão de Demanda de Vinhos com Séries Temporais.ipynb
+++ b/Análises/Previsão de Demanda de Vinhos com Séries Temporais.ipynb
@@ -106,14 +106,7 @@
    "source": [
     "## Análise Exploratória dos Dados\n",
     "\n",
-    "Na análise exploratória de dados será efetuada uma explanação inicial das variáveis contidas na dataset, e entenderemos dados referentes a:\n",
-    "\n",
-    "* *Contexto geral das variáveis*\n",
-    "* *Porcentagem de itens nulos*\n",
-    "* *Análise das variáveis separadas por seus respectivos grupos*\n",
-    "* *Divisão do conjunto de treino e teste*\n",
-    "* *Auto-ML*\n",
-    "* *Previsão em dados novos*\n"
+    "Na análise exploratória de dados será efetuada uma explanação inicial das variáveis contidas na dataset.\n"
    ]
   },
   {
