finalizando dataset de series temporais

--- a/Análises/Previsão de Demanda de Vinhos com Séries Temporais.ipynb
+++ b/Análises/Previsão de Demanda de Vinhos com Séries Temporais.ipynb
@@ -47,17 +47,20 @@
     "import datetime as dt\n",
     "import warnings\n",
     "import matplotlib.ticker as ticker\n",
+    "\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
-    "# importando o Prophet\n",
+    "# Importando o Prophet\n",
     "from prophet import Prophet\n",
     "from prophet.plot import plot_plotly\n",
+    "\n",
     "import plotly.offline as pyo\n",
     "import logging\n",
+    "\n",
     "logging.getLogger().setLevel(logging.ERROR)\n",
     "\n",
-    "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
-    "import numpy as np"
+    "# Métricas do Scikit-learn\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error"
    ]
   },
   {
