finalizando dataset de series temporais

--- a/Análises/Previsão de Demanda de Vinhos com Séries Temporais.ipynb
+++ b/Análises/Previsão de Demanda de Vinhos com Séries Temporais.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "## Aquisição dos Dados\n",
     "\n",
-    "Há dois arquivos disponíveis, baseados no *Kaggle*, criados pelo Rafael Duarte, que serão analisados. O primeiro disponível [aqui](https://raw.githubusercontent.com/rafaelnduarte/sigmoidal_data/master/products.csv) trata de informações sobre o produto. A primeira análise será sobre o mesmo a fim de entender melhor o rpoblema.\n",
+    "Há dois arquivos disponíveis, baseados no *Kaggle*, criados pelo Rafael Duarte, que serão analisados. O primeiro, disponível [aqui](https://raw.githubusercontent.com/rafaelnduarte/sigmoidal_data/master/products.csv), trata de informações sobre o produto. A primeira análise será sobre o mesmo a fim de entender melhor o problema.\n",
     "\n",
     "O próximo conjunto de dados é relacionado às vendas, disponível [aqui](https://raw.githubusercontent.com/rafaelnduarte/sigmoidal_data/master/sales-clean.csv). Neste conjunto é onde será utilizado a série temporal com o objetivo de prever a demanda."
    ]
