finalizando dataset de series temporais

--- a/Análises/Previsão de Demanda de Vinhos com Séries Temporais.ipynb
+++ b/Análises/Previsão de Demanda de Vinhos com Séries Temporais.ipynb
@@ -109,7 +109,7 @@
    "source": [
     "## Análise Exploratória dos Dados\n",
     "\n",
-    "Na análise exploratória de dados será efetuada uma explanação inicial das variáveis contidas na dataset.\n"
+    "Na análise exploratória de dados será efetuada uma explanação inicial das variáveis contidas no dataset.\n"
    ]
   },
   {
@@ -1884,7 +1884,7 @@
    "id": "fae2f5a0",
    "metadata": {},
    "source": [
-    "Veremos agora os vinhos mais que mais trazem receita e os mais vendidos."
+    "Veremos agora os vinhos que mais trazem receita e os mais vendidos."
    ]
   },
   {
