Finalized EDA, model building, and test predictions for fake news classifier

--- a/Análises/Classificador de Fake News.ipynb
+++ b/Análises/Classificador de Fake News.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a99e9ffc",
+   "id": "1b25d432",
    "metadata": {},
    "source": [
     "# Classificador de Fake News\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7283b67c",
+   "id": "47f0fbe3",
    "metadata": {},
    "source": [
     "## Como isso influencia nossa vida?\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcd83f5c",
+   "id": "c9e1840f",
    "metadata": {},
    "source": [
     "## O Projeto\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "898ed711",
+   "id": "79a59d5f",
    "metadata": {},
    "source": [
     "### Obtenção dos Dados\n",
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "efad9589",
+   "id": "2484ae98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "65d9e7da",
+   "id": "b8ff1fac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cba060ea",
+   "id": "f3c4919a",
    "metadata": {},
    "source": [
     "## Análise dos Dados\n",
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb093c57",
+   "id": "7897ad89",
    "metadata": {},
    "source": [
     "## Análise Exploratória dos Dados\n",
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "e0e92c21",
+   "id": "a50889b6",
    "metadata": {
     "scrolled": true
    },
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a5130f5",
+   "id": "a6b8a18e",
    "metadata": {},
    "source": [
     "Logo de início, pode-se fazer algumas observações:\n",
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "8251ac80",
+   "id": "e2c9897c",
    "metadata": {
     "scrolled": true
    },
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfa21a51",
+   "id": "d2434a95",
    "metadata": {},
    "source": [
     "O dataset possui 45 mil linhas e 5 colunas."
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "bf6e9255",
+   "id": "26c9465f",
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "0b12d04e",
+   "id": "60f5e93b",
    "metadata": {
     "scrolled": true
    },
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd228f92",
+   "id": "4c005b1f",
    "metadata": {},
    "source": [
     "A priori, as variáveis aparentam ter o tipo de dado coerente, exceto `date` que poderia ser datetime. Irei verificar agora a porcentagem de itens nulos"
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "923fe5bd",
+   "id": "732aa10a",
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ed5f797",
+   "id": "527fb561",
    "metadata": {},
    "source": [
     "Não há itens nulos no dataset."
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee4b1a3d",
+   "id": "b40337d5",
    "metadata": {},
    "source": [
     "### Wordcloud"
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8d78f69",
+   "id": "75865f1c",
    "metadata": {},
    "source": [
     "O WordCloud, também conhecido como nuvem de palavras, é uma representação visual de palavras em que o tamanho de cada palavra é proporcional à sua frequência ou importância em um determinado texto. É uma forma de visualização de dados textual que destaca as palavras mais relevantes ou frequentes em um conjunto de informações.\n",
@@ -408,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "3b52a15b",
+   "id": "a54b8a2f",
    "metadata": {
     "scrolled": true
    },
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16638da9",
+   "id": "bc87a4c5",
    "metadata": {},
    "source": [
     "Pode-se notar que as palavras Trump, Video, US e Obama se destacaram, o que demonstra um forte viés político nos títulos das notícias. "
@@ -471,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "350cefd8",
+   "id": "4a7c00fd",
    "metadata": {
     "scrolled": true
    },
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1ede5ae",
+   "id": "2dbd6385",
    "metadata": {},
    "source": [
     "Já na variável `text` as palavras que se destacaram foram \"said\", \"us\", \"Trump\", entre outras. A distribuição mudou em relação ao título."
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d644ab8e",
+   "id": "8ae516f6",
    "metadata": {},
    "source": [
     "### Balanceamento da feature `target`"
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61d8f3a3",
+   "id": "e3f99a41",
    "metadata": {},
    "source": [
     "Também é importante verificar a distribuição de notícias falsas e verdadeiras. Faremos o mesmo ao plotar um gráfico que contará as instâncias da feature `target`."
@@ -550,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "6f39fcea",
+   "id": "bac4c973",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "3f1004ce",
+   "id": "3f573030",
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be50b006",
+   "id": "8fc87859",
    "metadata": {},
    "source": [
     "Pode-se perceber que os dados estão balanceados, com 52.3% de dados que são considerados falsos e 47.7% verdadeiros."
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69fe79b5",
+   "id": "96b7d505",
    "metadata": {},
    "source": [
     "### Feature Engineering"
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5078431",
+   "id": "db154bcf",
    "metadata": {},
    "source": [
     "Feature Engineering é o processo de criação e seleção de variáveis (também conhecidas como \"features\") relevantes para um determinado problema de análise de dados. É uma das etapas mais importantes no desenvolvimento de modelos de Machine Learning, uma vez que a qualidade das variáveis usadas para treinar um modelo pode afetar significativamente sua precisão e capacidade de generalização.\n",
@@ -631,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "c4e174eb",
+   "id": "8b1b5415",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "2eb1d209",
+   "id": "ae64ab22",
    "metadata": {
     "scrolled": true
    },
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf9aceee",
+   "id": "904f92c8",
    "metadata": {},
    "source": [
     "Agora irei plotar um histograma para observar a frequência nas novas variáveis criadas."
@@ -793,7 +793,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "4524ee92",
+   "id": "dcba26eb",
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a928ab5",
+   "id": "2223681e",
    "metadata": {},
    "source": [
     "Pode-se perceber que:\n",
@@ -838,7 +838,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9efac79c",
+   "id": "765d51eb",
    "metadata": {},
    "source": [
     "## Tratamento de Strings\n",
@@ -851,7 +851,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "ba4907a5",
+   "id": "2196d59e",
    "metadata": {},
    "outputs": [
     {
@@ -983,7 +983,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6a19e42",
+   "id": "e2d4ca67",
    "metadata": {},
    "source": [
     "Agora, o que precisamos é separar nossos dados em treino, validação e teste, para que possamos continuar a trilhar o caminho que nos leva ao modelo."
@@ -992,7 +992,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "fd46959b",
+   "id": "1c9ddb47",
    "metadata": {
     "scrolled": false
    },
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6fba91d",
+   "id": "89afc895",
    "metadata": {},
    "source": [
     "### Pré-Processamento de Strings - NLP\n",
@@ -1038,7 +1038,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "f6077336",
+   "id": "60247a13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1073,7 +1073,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "1b7352c0",
+   "id": "b5aff0a0",
    "metadata": {
     "scrolled": true
    },
@@ -1097,7 +1097,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b36e104d",
+   "id": "418ad9fe",
    "metadata": {},
    "source": [
     "Essas etapas foram utilizadas para preparar dados de texto para treinar a rede neural, onde o texto foi convertido em sequências numéricas e aplicado padding para que todas as sequências tenham o mesmo comprimento. Isso permite que os modelos lidem com entradas de tamanho fixo."
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af4ca02b",
+   "id": "45e06c40",
    "metadata": {},
    "source": [
     "### Preparando, Instanciando e Treinando o Modelo\n",
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b20c5fde",
+   "id": "05d2e483",
    "metadata": {},
    "source": [
     "O modelo resumido em poucas linhas tem as seguintes características:\n",
@@ -1134,7 +1134,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "ce9e5838",
+   "id": "f642b381",
    "metadata": {
     "scrolled": true
    },
@@ -1170,7 +1170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "498dfea8",
+   "id": "8a416324",
    "metadata": {},
    "source": [
     "Durante o treinamento do modelo, foram executadas 3 épocas. Abaixo estão os resultados resumidos de cada época:\n",
@@ -1187,7 +1187,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "e0a37d21",
+   "id": "7b439c4b",
    "metadata": {},
    "outputs": [
     {
@@ -1228,7 +1228,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d584d30",
+   "id": "003d850b",
    "metadata": {},
    "source": [
     "### Fazendo Previsões no Conjunto de Teste\n",
@@ -1239,7 +1239,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "748889d8",
+   "id": "a15338dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1251,7 +1251,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "2f47a39d",
+   "id": "7b39f3d1",
    "metadata": {},
    "outputs": [
     {
@@ -1270,7 +1270,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "c6072c7c",
+   "id": "10dcff9c",
    "metadata": {},
    "outputs": [
     {
@@ -1302,7 +1302,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "128fe2fe",
+   "id": "691483bd",
    "metadata": {},
    "outputs": [
     {
@@ -1337,7 +1337,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "202b3e96",
+   "id": "bc3cbcb2",
    "metadata": {},
    "source": [
     "Os resultados das métricas no conjunto de teste são os seguintes:\n",
@@ -1353,19 +1353,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "963e79fd",
+   "id": "80e3e954",
    "metadata": {},
    "source": [
     "## Conclusão"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "838f5808",
+   "cell_type": "markdown",
+   "id": "aba63a18",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Em conclusão, o projeto \"Classificador de Fake News\" demonstra a aplicação eficaz de técnicas de ciência de dados, especialmente o uso de **redes neurais**, para combater a disseminação de informações falsas. Através da análise de dados, treinamento do modelo e avaliação de métricas, **foi possível construir um classificador capaz de distinguir notícias verdadeiras das falsas**.\n",
+    "\n",
+    "O modelo alcançou **resultados impressionantes**, com uma a**lta acurácia de 99,9% no conjunto de teste**. Isso significa que o modelo foi capaz de **classificar corretamente a grande maioria das amostras**, o que é extremamente promissor no contexto de detecção de fake news. Além disso, métricas como recall e precisão também apresentaram valores elevados, mostrando que **o modelo conseguiu identificar corretamente a maioria das notícias falsas e realizar previsões precisas**.\n",
+    "\n",
+    "Ao longo do projeto, também foi possível observar a presença de um **viés político nas notícias**, destacado pela análise das nuvens de palavras. Essa informação é relevante, pois ressalta a importância de garantir a imparcialidade e a objetividade nas fontes de notícias.\n",
+    "\n",
+    "No geral, o projeto apresenta uma abordagem sólida para a detecção de fake news e oferece uma contribuição significativa para a promoção de informações verificadas e confiáveis. Com o avanço contínuo da tecnologia e aprimoramento dos modelos de machine learning, é possível vislumbrar um futuro em que ferramentas como essa desempenharão um papel fundamental na luta contra a desinformação e na promoção da transparência e confiabilidade nas notícias."
+   ]
   }
  ],
  "metadata": {
